# SDLSkeleton

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
app/: DemoApp.cpp  DemoApp.h
lib/app/: App.cpp  App.h  color.h  coord.h
lib/init/: init_sdl.h
